Mensaje del commit

--- a/Gotita Viva/templates/index.html
+++ b/Gotita Viva/templates/index.html
@@ -17,6 +17,15 @@
       <li><a href="main.html">Cerrar sesión</a></li>
     </ul>
   </nav>
+  <!-- Modal de Alerta -->
+  <div id="alertaModal" class="modal">
+    <div class="modal-content">
+      <span id="cerrarModal" class="close">&times;</span>
+      <h2>Advertencia</h2>
+      <p id="alertMessage">El agua es demasiado ácida para el uso humano.</p>
+      <p>Necesita una limpieza.</p>
+    </div>
+  </div>
 
   <div class="container">
     <!-- Tarjeta 1 -->
