reparacion_de_ruta_imagen

--- a/Gotita Viva/styles/estilosgral.css
+++ b/Gotita Viva/styles/estilosgral.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url('../assets/inicio_sesion.png');
+    background-image: url('../assets/Inicio_sesion.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
