--- a/Gotita Viva/templates/main.html
+++ b/Gotita Viva/templates/main.html
@@ -184,6 +184,7 @@
                 </ul>
             </li>
             <li><a href="contactanos.html">Contáctanos</a></li>
+            <li><a href="servicios.html">Servicios</a></li>
         </ul>
     </nav>
 
